--- a/Client-Workshop/app.config
+++ b/Client-Workshop/app.config
@@ -7,7 +7,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:50148/svc_calculation.svc"
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/WCF_Service_Library/Svc_calculation/"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICalculation"
                 contract="ICalculation" name="BasicHttpBinding_ICalculation" />
         </client>
