--- a/WCF Server.csproj
+++ b/WCF Server.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -70,6 +71,8 @@
     </Compile>
     <Compile Include="ICalculation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnconditionalPolicy.cs" />
+    <Compile Include="CustomUserNameValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
